# crypto-scalper-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  CLAUDE_INSTRUCTIONS.md  Dockerfile  PROJECT_STATUS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_all_strategies_backtest.py  run_optimized_strategies.py  run_paper_trading.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  release.yml  security.yml
argocd/: notifications-cm.yaml
argocd/apps/: applicationset.yaml  trading-bot-dev.yaml  trading-bot-prod.yaml  trading-bot-staging.yaml
argocd/projects/: trading-bot.yaml
config/: risk.yaml  settings.yaml
data/: trade_history.db
data/historical/: AAVEUSDT_1h.json  ADAUSDT_1h.json  ALGOUSDT_1h.json  APEUSDT_1h.json  APTUSDT_1h.json  ARBUSDT_1h.json  ATOMUSDT_1h.json  AVAXUSDT_1h.json  AXSUSDT_1h.json  BNBUSDT_1h.json  BTCUSDT_1h.json  CFXUSDT_1h.json  CHZUSDT_1h.json  CRVUSDT_1h.json  DOGEUSDT_1h.json  DOTUSDT_1h.json  DYDXUSDT_1h.json  EGLDUSDT_1h.json  EOSUSDT_1h.json  ETCUSDT_1h.json  ETHUSDT_1h.json  FETUSDT_1h.json  FILUSDT_1h.json  FLOWUSDT_1h.json  FTMUSDT_1h.json  GMXUSDT_1h.json  GRTUSDT_1h.json  ICPUSDT_1h.json  IMXUSDT_1h.json  INJUSDT_1h.json  LDOUSDT_1h.json  LINKUSDT_1h.json  LTCUSDT_1h.json  MANAUSDT_1h.json  MKRUSDT_1h.json  NEARUSDT_1h.json  OPUSDT_1h.json  ORDIUSDT_1h.json  RUNEUSDT_1h.json  SANDUSDT_1h.json  (+14 more)
docs/: API.md  API_UK.md  BOOK_STRATEGIES_UK.md  CONFIGURATION_UK.md  DEPLOYMENT.md  QUICKSTART_UK.md  USER_GUIDE.md  USER_GUIDE_UK.md  disaster-recovery.md  performance-tuning.md  production-checklist.md
examples/: config-aggressive.yaml  config-conservative.yaml  config-ml-focused.yaml  config-multi-exchange.yaml
grafana/dashboards/: exchange-health.json  risk-management.json  strategy-performance.json  trading-overview.json
grafana/provisioning/: dashboards.yml  datasources.yml
helm/crypto-scalper-bot/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/crypto-scalper-bot/templates/: _helpers.tpl  configmap.yaml  dashboard-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  (+2 more)
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  rbac.yaml  redis.yaml  secret.yaml  service.yaml  servicemonitor.yaml
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
notebooks/: 01_data_exploration.ipynb
scripts/: collect_data.py  monitor.py  paper_trade.py  run_backtest.py  run_dashboard.py  run_e2e_tests.sh  run_optimization.py  test_websocket.py
security/: audit.py  best_practices.md
src/: __init__.py  main.py
src/alerts/: __init__.py  alert_system.py
src/analytics/: __init__.py  attribution.py  cluster_analysis.py  liquidation_heatmap.py  print_tape.py  sentiment.py  trade_journal.py
src/backtest/: __init__.py  data_loader.py  engine.py
src/backtesting/: __init__.py  analysis.py  data.py  engine.py
src/core/: __init__.py  engine.py  events.py
src/dashboard/: __init__.py  api.py  metrics.py  portfolio.py  visualizations.py
src/data/: __init__.py  cache.py  models.py  orderbook.py  storage.py  trade_history_db.py  websocket.py
src/execution/: __init__.py  binance_api.py  bybit_api.py  exchange_base.py  exchange_factory.py  fee_optimizer.py  gateio_api.py  kraken_api.py  kucoin_api.py  okx_api.py  paper_trading.py
src/integrations/: __init__.py  slack.py  telegram_bot.py  tradingview.py
src/messaging/: __init__.py  events.py  kafka_client.py  schemas.py
src/monitoring/: __init__.py  prometheus_metrics.py
src/notifications/: __init__.py  push.py  telegram.py  telegram_bot.py
src/optimization/: __init__.py  optuna_optimizer.py  walk_forward.py
src/reporting/: __init__.py  pdf_generator.py  tax_report.py  templates.py
src/risk/: __init__.py  manager.py  metrics.py
src/signals/: __init__.py  signal_provider.py
src/strategies/: arbitrage.py  ml_signals.py  sentiment.py
src/strategy/: __init__.py  advanced_orderbook.py  base.py  dca_strategy.py  grid_trading.py  hybrid_scalping.py  impulse_scalping.py  mean_reversion.py  ml_strategy.py  orderbook_imbalance.py  range_trading.py  session_trading.py  smart_dca.py  trendline_breakout.py  volume_spike.py
src/trading/: __init__.py  live_trading.py  multi_account.py  news_event_trading.py  paper_trading.py
src/utils/: __init__.py  config.py  logger.py  metrics.py  performance.py  security.py
src/web/: __init__.py  app.py  dashboard_html.py  middleware.py  webhook.py
tests/: __init__.py  test_alert_system.py  test_all_strategies.py  test_backtest.py  test_backtest_engine.py  test_backtesting.py  test_book_strategies.py  test_cache.py  test_configs.py  test_dashboard_api.py  test_dca_gateio.py  test_events.py  test_exchange_base.py  test_execution.py  test_integrations.py  test_liquidation_heatmap.py  test_models.py  test_multi_account.py  test_multi_exchange.py  test_new_exchanges.py  test_new_strategies.py  test_news_event_trading.py  test_orderbook.py  test_paper_trading.py  test_risk.py  test_risk_manager.py  test_scalping_strategies.py  test_signal_provider.py  test_smart_dca.py  test_strategies.py  test_telegram_bot.py  test_trade_journal.py  test_trading_engine.py  test_utils.py  test_walk_forward.py  test_web_app.py  test_websocket.py
tests/e2e/: __init__.py  conftest.py  pytest.ini  test_api_integration.py  test_database_integration.py  test_full_system.py  test_multi_exchange.py  test_trading_flow.py  test_websocket_integration.py
ручне_тестування/: 00_ГОЛОВНИЙ_ЧЕКЛІСТ.md  01_запуск_та_базова_функціональність.md  02_аутентифікація.md  03_торгові_операції.md  04_стратегії.md  05_біржі_та_підключення.md  06_ризик_менеджмент.md  07_бектестинг.md  08_сповіщення_та_інтеграції.md  09_дані_та_аналітика.md  10_paper_trading.md  11_обробка_помилок.md  12_продуктивність.md  РЕЗУЛЬТАТИ_ТЕСТУВАННЯ.md
(+12 files in other folders)
